<resources>
    <string name="app_name">SEG 2105 Group 6 Project</string>

    <string name="grimpeurs_name">Grimpeurs Cycling Club</string>

    <string name="sign_in_name">Sign in</string>
    <string name="enter_username">Username</string>

    <string name="club_account_name">Club</string>

    <string name="participant_account_name">Participant</string>


    <string name="dont_have_account">Don\'t have an account? Click below! </string>

    <string name="login_name">Login</string>
    <string name="create_participant_name">Create Participant Account</string>
    <string name="create_club_name">Create Club Account</string>
    <string name="create_event_name">Create Event</string>

    <string name="create_account_name">Create Account</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_name">Email</string>

    <string name="exit">x</string>
    <string name="welcome_name_text">Welcome to Grimpeurs Cycling!</string>
    <string name="enter_password">Password</string>

    <string name="create_event">Create New Event</string>
    <string name="current_events">Current Events Being Hosted:</string>

    <string name="club_account_welcome">Club Dashboard</string>
    <string name="participant_welcome">User Dashboard</string>
    <string name="admin_welcome">Admin Dashboard</string>

    <string name="delete_user_EditText">Enter username of participant </string>
    <string name="delete_participant_button">Delete Participant account</string>
    <string name="delete_organizer_EditText">Enter username of Club Organizer</string>
    <string name="delete_organizer_button">Delete Club account</string>
    <string name="create_new_event_button">Add New Event Type</string>


    <string name="add_event_name">Enter Event Name</string>
    <string name="add_event_description"> Enter Event Description</string>

    <string name="name_update">Update</string>
    <string name="name_delete">Delete</string>

    <string name="event_types">Event Types</string>
    <string name="hold_item">(Hold item to edit)</string>

    <string name="region">Region</string>
    <string name= "distance">Distance</string>
    <string name= "average_pace">Average Pace (Km/Hr)</string>
    <string name = "max_participants">Max Participants</string>
    <string name = "name_minimum_age">Minimum Age</string>
    <string name = "registration_fee">Registration Fee</string>

    <string name="level_select">Level (1-3)</string>
    <string name= "event_name">Event Name</string>
    <string name = "organizer_info_button">Add additional info </string>
    <string name = "info_dialog_phone_editText">Enter your phone number</string>
    <string name = "info_dialog_instagram_link_editText">Enter the link to your Instagram</string>
    <string name = "info_dialog_add_button">Add info to account</string>
    <string name = "instagram_link_EditText">Instagram Link</string>
    <string name = "phone_number_EditText">Phone Number</string>
    <string name = "search_event_button">Search for event</string>
    <string name = "rate_club_button">Rate a club</string>
    <string name = "Search_edit_text">Search by type, event or club</string>
    <string name = "search_btn">Search</string>
    <string name="string_club_rate">Rate a Club from 0 - 5</string>
    <string name="Search_for_club">Search by club name</string>
    <string name="add_rating">Enter rating from 0 - 5</string>
    <string name="add_comment">Why did you give that rating?</string>
    <string name="rate">Submit Rating</string>
</resources>