<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminDashboard" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6D5CA"
        android:orientation="vertical">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5CFF9800"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/grimpeurs_name"
            android:textSize="30sp"
            android:typeface="normal" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5CFF9800"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/admin_welcome"
            android:textSize="28sp"
            android:typeface="normal" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <EditText
            android:id="@+id/deleteParticipantEditText"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/delete_user_EditText"
            android:inputType="text" />

        <Button
            android:id="@+id/btnDeleteParticipant"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#c4823b"
            android:text="@string/delete_participant_button" />

        <EditText
            android:id="@+id/deleteOrganizerEditText"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/delete_organizer_EditText"
            android:inputType="text" />

        <Button
            android:id="@+id/btnDeleteClub"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#c4823b"
            android:text="@string/delete_organizer_button" />

        <EditText
            android:id="@+id/eventNameEditText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/add_event_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/eventDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/add_event_description"
            android:inputType="text" />

        <Button
            android:id="@+id/btnAddEventType"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#c4823b"
            android:text="@string/create_new_event_button" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/event_types" />

        <TextView
            android:id="@+id/holdItemTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/hold_item" />

        <ListView
            android:id="@+id/eventTypeListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>