<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE8E4"

    android:orientation="vertical">

    <EditText
        android:id="@+id/eventNameUpdateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_event_name"></EditText>

    <EditText
        android:id="@+id/eventDescriptionUpdateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_event_description"></EditText>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:backgroundTint="#c4823b"
            android:text="@string/name_update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:backgroundTint="#c4823b"
            android:text="@string/name_delete" />
    </LinearLayout>

</LinearLayout>