<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6D5CA"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5CFF9800"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/grimpeurs_name"
            android:textSize="30sp"
            android:typeface="normal" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="wrap_content"
            android:layout_height="121dp"

            android:src="@drawable/bike_image_00"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/leftTextLine"
                android:layout_width="110dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/createParticipantText"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center|center_horizontal"
                android:text="@string/sign_in_name"
                android:textSize="28sp" />

            <View
                android:id="@+id/rightTextLine"
                android:layout_width="110dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/black"
                android:gravity="center" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameTextInput"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="Username"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passTextInput"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:onClick="onLogin"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="160dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="#c4823b"
            android:onClick="onLogin"
            android:text="@string/login_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/noAccountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/dont_have_account"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/btnCreateClub"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#c4823b"
            android:onClick="onCreateClubAccount"
            android:text="@string/create_club_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/btnCreateParticipant"
            android:layout_width="230dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="#c4823b"
            android:onClick="onCreateParticipantAccount"
            android:text="@string/create_participant_name" />

    </LinearLayout>

</RelativeLayout>