<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrganizerAccount" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6D5CA"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5CFF9800"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/grimpeurs_name"
            android:textSize="30sp"
            android:typeface="normal" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="wrap_content"
            android:layout_height="121dp"

            android:src="@drawable/bike_image_00"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <View
                android:id="@+id/leftTextLine"
                android:layout_width="70dp"
                android:layout_height="1dp"
                android:layout_marginTop="26dp"
                android:background="@color/black"
                 />

            <TextView
                android:id="@+id/createParticipantText"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center|center_horizontal"
                android:text="@string/create_club_name"
                android:textSize="24sp" />

            <View
                android:id="@+id/rightTextLine"
                android:layout_width="70dp"
                android:layout_height="1dp"
                android:layout_marginTop="26dp"
                android:background="@color/black"
                android:gravity="center" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstNameTextInput"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:hint="@string/first_name" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastNameTextInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/last_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailTextInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/email_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameTextInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/enter_username"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passTextInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/enter_password"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumTextInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/phone_number_EditText"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/linkTextInput"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/instagram_link_EditText"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#c4823b"
            android:text="@string/create_club_name" />

    </LinearLayout>

</RelativeLayout>