<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrganizerDashboard" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E6D5CA"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5CFF9800"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/grimpeurs_name"
            android:textSize="30sp"
            android:typeface="normal" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <ImageView
            android:id="@+id/mainLogo"
            android:layout_width="wrap_content"
            android:layout_height="121dp"

            android:src="@drawable/bike_image_00"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5CFF9800"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/club_account_welcome"
            android:textSize="28sp"
            android:typeface="normal" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <Button
            android:id="@+id/btnCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="#c4823b"
            android:text="@string/create_event" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/eventsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#5CFF9800"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="@string/current_events"
            android:textSize="24sp"
            android:typeface="normal" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <ListView
            android:id="@+id/eventListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>